update(admin, menu, ordercode ok)

--- a/Cafe_Kiosk/src/main/resources/templates/ordercodepage.html
+++ b/Cafe_Kiosk/src/main/resources/templates/ordercodepage.html
@@ -5,8 +5,8 @@
 <title>테스트</title>
 </head>
 <body>
-
-<h2>주문페이지 : [[{${orderpage}]]</h2>
+<h2>서버시간 : [[{${serverTime}]]</h2>
+<h2>주문페이지 : [[{${ordercodepage}]]</h2>
 
 </body>
 </html>
