--- a/Cafe_Kiosk/src/main/resources/templates/ordercodepage.html
+++ b/Cafe_Kiosk/src/main/resources/templates/ordercodepage.html
@@ -5,8 +5,9 @@
 <title>테스트</title>
 </head>
 <body>
-<h2>서버시간 : [[{${serverTime}]]</h2>
-<h2>주문페이지 : [[{${ordercodepage}]]</h2>
+<h2>서버시간 : [[${serverTime}]]</h2>
+
+<h3>주문화면 : [[${list}]]</h3>
 
 </body>
 </html>
