--- a/Cafe_Kiosk/src/main/resources/templates/Menu.html
+++ b/Cafe_Kiosk/src/main/resources/templates/Menu.html
@@ -9,6 +9,8 @@
 <h2>DB 시간 : [[${serverTime}]]</h2>
 <h2> 메뉴 : [[{${menulist}]]</h2>
 
+<h2> 메뉴 : [[{${menuinfo}]]</h2>
+
 	<h2>메뉴저장 : [[{${insertmenu}]]</h2>
 	<h2>메뉴수정 : [[{${updatemenu}]]</h2>
 	<h2>메뉴삭제 : [[{${deletemenu}]]</h2>
