--- a/Cafe_Kiosk/src/main/resources/templates/Menu.html
+++ b/Cafe_Kiosk/src/main/resources/templates/Menu.html
@@ -9,7 +9,7 @@
 <h2>DB 시간 : [[${serverTime}]]</h2>
 <h2> 메뉴 : [[{${menulist}]]</h2>
 
-<h2> 메뉴 상세정보 : [[{${menuinfo}]]</h2>
+<h2> 메뉴 상세정보 : [[{${menuone}]]</h2>
 
 <h2> 메뉴 카테고리 : [[{${menucategory}]]</h2>
 
