--- a/Cafe_Kiosk/src/main/resources/templates/Menu.html
+++ b/Cafe_Kiosk/src/main/resources/templates/Menu.html
@@ -11,6 +11,8 @@
 
 <h2> 메뉴 상세정보 : [[{${menuone}]]</h2>
 
+<h2>음료사이즈에 따른 가격 : [[${drinksize}]]</h2>
+
 <h2> 메뉴 카테고리 : [[{${menucategory}]]</h2>
 
 	<h2>메뉴저장 : [[{${insertmenu}]]</h2>
