--- a/Cafe_Kiosk/src/main/resources/templates/OrderPage.html
+++ b/Cafe_Kiosk/src/main/resources/templates/OrderPage.html
@@ -5,9 +5,8 @@
 <title>테스트</title>
 </head>
 <body>
-<h2>서버시간 : [[${serverTime}]]</h2>
 
-<h3>주문화면 : [[${list}]]</h3>
+<h3>주문화면 : [[${orderpage}]]</h3>
 
 </body>
 </html>
