--- a/Cafe_Kiosk/src/main/resources/templates/uploadForm.html
+++ b/Cafe_Kiosk/src/main/resources/templates/uploadForm.html
@@ -6,11 +6,9 @@
 </head>
 <body>
 	<h2>파일 업로드</h2>
-	<form action="/upload" method="post" enctype="multipart/form-data">
-
-		<h4>단일 파일 업로드</h4>
-		<input type="file" name="file" multiple="multiple">
-
+	<form method="post" action="/upload" enctype="multipart/form-data">
+		<input type="file" name="uploadfile" multiple="multiple"> <br />
+		<input type="submit">
 	</form>
 
 </body>
