--- a/Cafe_Kiosk/src/main/resources/templates/uploadForm.html
+++ b/Cafe_Kiosk/src/main/resources/templates/uploadForm.html
@@ -8,7 +8,8 @@
 	<h2>파일 업로드</h2>
 	<form method="post" action="/upload" enctype="multipart/form-data">
 		<input type="file" name="uploadfile" multiple="multiple"> <br />
-		<input type="submit">
+		<hr />
+		<input type="submit" value="사진등록">
 	</form>
 
 </body>
