--- a/Cafe_Kiosk/src/main/resources/static/css/style.css
+++ b/Cafe_Kiosk/src/main/resources/static/css/style.css
@@ -96,12 +96,14 @@ header #adminBtn button {
   position : absolute;
   top : 0;
   left : -5px;
+  background-color : white;
 }
 
 .category {
   width : 2160px;
   height : 200px;
   position : absolute;
+  
 }
 
 .category span {
@@ -121,23 +123,8 @@ header #adminBtn button {
   width : 500px;
   height : 200px;
   text-align : center;
+  
 }
-
-.category .categoryCoffee .active
-{
-  border : 5px solid black;
-  background-color : greenyellow;
-  font-size : 50px;
-  font-weight : 700;
-  position : absolute;
-  width : 500px;
-  height : 200px;
-  text-align : center;
-}
-
-.category .categoryCoffee:hover {
-  background-color : green;
-} 
 
 .category .categoryBeverage 
 {
@@ -151,11 +138,7 @@ header #adminBtn button {
   position : absolute;
 }
 
-.category .categoryBeverage:hover {
-  background-color : green;
-}
-
-.category .categoryDesert 
+.category .categoryDessert 
 {
   border : 5px solid black;
   background-color : greenyellow;
@@ -165,10 +148,6 @@ header #adminBtn button {
   height : 200px;
   left : 1000px;
   position : absolute;
-}
-
-.category .categoryDesert:hover {
-  background-color : green;
 }
 
 .orderPage .menuList {
@@ -203,7 +182,33 @@ header #adminBtn button {
   margin-right: 100px;
 }
 
-.menuList .coffeeImg {
+.menuList .beverageList .beverage {
+  display: block;
+  width: 250px;
+  text-align: center;
+  text-decoration:none;
+  color: black;
+  float:left;
+  margin-top : 100px;
+  margin-left : 100px;
+  margin-right: 100px;
+}
+
+
+.menuList .dessertList .dessert {
+  display: block  ;
+  width: 250px;
+  text-align: center;
+  text-decoration:none;
+  color: black;
+  float:left;
+  margin-top : 100px;
+  margin-left : 100px;
+  margin-right: 100px;
+}
+
+
+.menuList .menuImg {
     width : 300px;
     height : 400px;
 }
@@ -245,14 +250,13 @@ header #adminBtn button {
   text-align: center;
 }
 
- #orderMenu .coffeeImg {
+ #orderMenu #selectImg {
 
     position : absolute;
     left : 2%;
     width : 30%;
     height : 40%;
     top : 20%;
-    background-color : white;
  }
 
  #orderMenu .select {
