--- a/Cafe_Kiosk/src/main/resources/templates/OrderPage.html
+++ b/Cafe_Kiosk/src/main/resources/templates/OrderPage.html
@@ -8,5 +8,11 @@
 
 <h3>주문화면 : [[${orderpage}]]</h3>
 
+<h3>주문화면 : [[${ordercodepage}]]</h3>
+
+<h3>주문정보 : [[${orderinfo}]]</h3>
+
+<h3>주문상세정보 : [[${orderdetail}]]</h3>
+
 </body>
 </html>
