--- a/Cafe_Kiosk/src/main/resources/templates/Menu.html
+++ b/Cafe_Kiosk/src/main/resources/templates/Menu.html
@@ -18,6 +18,7 @@
   <script src="https://unpkg.com/jquery@3.6.1/dist/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
   <script src="js/main.js"></script>
+  <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
   
   <link rel="stylesheet" href="css/style.css">
 
@@ -76,28 +77,117 @@
   </container>
 
   <div id= "modal"> </div>
-      <div id = "orderMenu">
+  <div id = "orderCoffee">
           <img src="" id="selectImg">
           <span id="orderTitle"> 주문 하기</span>
-          <div id="close_button" style ="cursor: pointer;"> x </div>
+          <box-icon id="close_button" name='window-close'></box-icon>
           <span id="selectName" class="select"> 메뉴&nbsp;이름 </span> <span id="selectedName"> 아메리카노 </span> </br>
           <span id="selectPrice" class="select"> 가&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;격 </span> <span id="selectedPrice"> 3000 </span> </br>
           <span id="selectTemp" class="select"> 핫/아이스 </span> <div id="selectHot" onclick="choiceHot()"> HOT </div> <div id="selectIce" onclick="choiceIce()"> ICE </div>
           <span id="selectSize" class="select"> 사&nbsp;이&nbsp;즈&nbsp;</span> <div id="selectSmall" onclick="choiceSmall()"> SMALL </div> <div id="selectLarge" onclick="choiceLarge()"> LARGE </div>
-  
+		  <span id="selectNumber" class="select"> 수&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;량 </span>
+    	  <div class="number">
+            <box-icon id="minusBtn" type="solid" name='minus-circle' size="lg" color="black" onclick="minusNumber()"></box-icon>
+            <span id="orderNumber"> 1 </span> 
+            <box-icon id="plusBtn" type="solid" name='plus-circle' size="lg" color="black" onclick="plusNumber()"> </box-icon>
+          </div>
   		  <!-- 핫/아이스, 사이즈가 표시될 태그 -->
   		  <span id="sizeBox"></span>	
           <input type="button" value="주문하기" class="orderBtn">
-        </div>
-      </div>
+  </div>
+  
+  <div id = "orderBeverage">
+          <img src="" id="selectImg">
+          <span id="orderTitle"> 주문 하기</span>
+          <box-icon id="close_button" name='window-close'></box-icon>
+          <span id="selectName" class="select"> 메뉴&nbsp;이름 </span> <span id="selectedName"> 아메리카노 </span> </br>
+          <span id="selectPrice" class="select"> 가&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;격 </span> <span id="selectedPrice"> 3000 </span> </br>
+          <span id="selectTemp" class="select"> 핫/아이스 </span>  <div id="selectIce" onclick="choiceIce()"> ONLY ICE </div>
+          <span id="selectSize" class="select"> 사&nbsp;이&nbsp;즈&nbsp;</span> <div id="selectSmall" onclick="choiceSmall()"> SMALL </div> <div id="selectLarge" onclick="choiceLarge()"> LARGE </div>
+		  <span id="selectNumber" class="select"> 수&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;량 </span>
+    	  <div class="number">
+            <box-icon id="minusBtn" type="solid" name='minus-circle' size="lg" color="black" onclick="minusNumber()"></box-icon>
+            <span id="orderNumber"> 1 </span> 
+            <box-icon id="plusBtn" type="solid" name='plus-circle' size="lg" color="black" onclick="plusNumber()"> </box-icon>
+          </div>
+  		  <!-- 핫/아이스, 사이즈가 표시될 태그 -->
+  		  <span id="sizeBox"></span>	
+          <input type="button" value="주문하기" class="orderBtn">
+  </div>
+  
+    <div id = "orderDessert">
+          <img src="" id="selectImg">
+          <span id="orderTitle"> 주문 하기</span>
+          <box-icon id="close_button" name='window-close'></box-icon>
+          <span id="selectName" class="select"> 메뉴&nbsp;이름 </span> <span id="selectedName"> 아메리카노 </span> </br>
+          <span id="selectPrice" class="select"> 가&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;격 </span> <span id="selectedPrice"> 3000 </span> </br>
+		  <span id="selectNumber" class="select"> 수&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;량 </span>
+    	  <div class="number">
+            <box-icon id="minusBtn" type="solid" name='minus-circle' size="lg" color="black" onclick="minusNumber()"></box-icon>
+            <span id="orderNumber"> 1 </span> 
+            <box-icon id="plusBtn" type="solid" name='plus-circle' size="lg" color="black" onclick="plusNumber()"> </box-icon>
+          </div>
+  		  <!-- 핫/아이스, 사이즈가 표시될 태그 -->
+  		  <span id="sizeBox"></span>	
+          <input type="button" value="주문하기" class="orderBtn">
+  </div>
+  
 
 </body>
 <script>
 window.onload = moveCoffee();
 
 
-$(".coffee").click(function() {
+function moveCoffee() {
+			
+	  $(".coffeeList").css("display","block");
+	  $(".categoryCoffee").css("background-color","blue");
 
+	  $(".beverageList").css("display","none");
+	  $(".categoryBeverage").css("background-color","greenyellow");
+
+	  $(".dessertList").css("display","none");
+	  $(".categoryDessert").css("background-color","greenyellow");
+
+	  }
+	  
+	  function moveBeverage() {
+	    $(".coffeeList").css("display","none");
+	   $(".categoryCoffee").css("background-color","greenYellow");
+
+	   $(".beverageList").css("display","block");
+	   $(".categoryBeverage").css("background-color","blue");
+
+	   $(".dessertList").css("display","none");
+	   $(".categoryDessert").css("background-color","greenyellow");
+
+
+	  }
+	  
+	  function moveDessert() {
+	   $(".coffeeList").css("display","none");
+	   $(".categoryCoffee").css("background-color","greenYellow");
+
+	   $(".beverageList").css("display","none");
+	   $(".categoryBeverage").css("background-color","greenyellow");
+
+	   $(".dessertList").css("display","block");
+	   $(".categoryDessert").css("background-color","blue");
+
+	  }
+
+function resetData() {
+	orderNum = 1;
+	$("#orderNumber").text(orderNum);
+	price1 = 0;
+	price2 = 0;	
+}	  
+	  
+var orderNum = 1;
+
+$(".coffee").click(function() {
+	
+  resetData();
   $("#selectIce").css("background-color","#FEEBB6");  
   $("#selectHot").css("background-color","red");
   $("#selectSmall").css("background-color","red");  
@@ -115,7 +205,7 @@ $(".coffee").click(function() {
   $("#selectImg").attr("src",src);    
 
 
-  $("#orderMenu").fadeIn();
+  $("#orderCoffee").fadeIn();
   $("#modal").fadeIn();
 
   $.ajax({
@@ -139,6 +229,7 @@ $(".coffee").click(function() {
 
 $(".beverage").click(function() {
 
+	  resetData();
 	  $("#selectIce").css("background-color","#FEEBB6");  
 	  $("#selectHot").css("background-color","red");
 	  $("#selectSmall").css("background-color","red");  
@@ -156,7 +247,7 @@ $(".beverage").click(function() {
 	  $("#selectImg").attr("src",src);    
 
 
-	  $("#orderMenu").fadeIn();
+	  $("#orderBeverage").fadeIn();
 	  $("#modal").fadeIn();
 	  alert(JSON.stringify(thisNo));
 	  $.ajax({
@@ -179,7 +270,8 @@ $(".beverage").click(function() {
 	});
 	
 $(".dessert").click(function() {
-
+	
+	  resetData();
 	  $("#selectIce").css("background-color","#FEEBB6");  
 	  $("#selectHot").css("background-color","red");
 	  $("#selectSmall").css("background-color","red");  
@@ -197,7 +289,7 @@ $(".dessert").click(function() {
 	  $("#selectImg").attr("src",src);    
 
 
-	  $("#orderMenu").fadeIn();
+	  $("#orderDessert").fadeIn();
 	  $("#modal").fadeIn();
 
 	  $.ajax({
@@ -220,9 +312,12 @@ $(".dessert").click(function() {
 	});
 
 $("#close_button").click(function(){
-    $("#orderMenu").fadeOut();
-    $("#modal").fadeOut();
+    $("#orderCoffee").fadeOut();
+    $("#orderBeverage").fadeOut();
+    $("#orderDessert").fadeOut();
 
+    $("#modal").fadeOut();
+    
 });
 
 var price1 = 0;
@@ -230,70 +325,101 @@ var price2 = 0;
 sumprice = 0;
 
 function setPrice() {
-  sumPrice =  parseint($("#dfPrice").val() + price1 + price2);
+  sumPrice = (parseInt($("#selectedPrice").val()) + price1*1 + price2*1)*orderNum;
+  $("#selectedPrice").text(sumPrice +"원");
 }
 
 function choiceHot(){
+  if(price1 == 0){
+	  price1 = 0;
+  } else {
+	  price1 = price1;
+  }
+  if(price2 == 0){
+	  price = 0;
+  } else {
+	  price2 = price2;
+  }
   $("#selectIce").css("background-color","#FEEBB6");  
   $("#selectHot").css("background-color","red");
-  console.log($("#HOT").val());
+  price1 = parseInt($("#HOT").val());
+  setPrice();
 }
 
 function choiceIce(){
+	if(price1 == 0){
+		  price1 = 0;
+	  } else {
+		  price1 = price1;
+	  }
+	  if(price2 == 0){
+		  price = 0;
+	  } else {
+		  price2 = price2;
+	  }	
   $("#selectIce").css("background-color","red");  
   $("#selectHot").css("background-color","#FEEBB6");
-  console.log($("#ICE").val());
+  price1 = parseInt($("#ICE").val());
+  setPrice();
 }
 
 function choiceSmall(){
+	if(price1 == 0){
+		  price1 = 0;
+	  } else {
+		  price1 = price1;
+	  }
+	  if(price2 == 0){
+		  price = 0;
+	  } else {
+		  price2 = price2;
+	  }
   $("#selectSmall").css("background-color","red");  
   $("#selectLarge").css("background-color","#FEEBB6");
-  console.log($("#SMALL").val());
+  price2 = parseInt($("#SMALL").val());
+  setPrice();
 }
 
 function choiceLarge(){
+	  if(price1 == 0){
+		  price1 = 0;
+	  } else {
+		  price1 = price1;
+	  }
+	  if(price2 == 0){
+		  price = 0;
+	  } else {
+		  price2 = price2;
+	  }
   $("#selectSmall").css("background-color","#FEEBB6");  
   $("#selectLarge").css("background-color","red");
-  console.log($("#LARGE").val());
+  price2 = parseInt($("#LARGE").val());
+  setPrice();
 
 }
 
-function moveCoffee() {
-  $(".coffeeList").css("display","block");
-  $(".categoryCoffee").css("background-color","blue");
+function plusNumber() {
+  if(orderNum < 9) {
+    orderNum = orderNum + 1; }
+  else if(orderNum == 9) {
+    orderNum = 9;
+  }    
+  $("#orderNumber").text(orderNum);
+  setPrice();
+}
 
-  $(".beverageList").css("display","none");
-  $(".categoryBeverage").css("background-color","greenyellow");
-
-  $(".dessertList").css("display","none");
-  $(".categoryDessert").css("background-color","greenyellow");
-
+function minusNumber() {
+  if(orderNum > 1) {
+    orderNum = orderNum - 1; }
+  else if(orderNum == 1) {
+    orderNum = 1;
   }
-  
-  function moveBeverage() {
-    $(".coffeeList").css("display","none");
-   $(".categoryCoffee").css("background-color","greenYellow");
 
-   $(".beverageList").css("display","block");
-   $(".categoryBeverage").css("background-color","blue");
+  $("#orderNumber").text(orderNum);
+  setPrice();
 
-   $(".dessertList").css("display","none");
-   $(".categoryDessert").css("background-color","greenyellow");
+}
 
-
-  }
-  
-  function moveDessert() {
-   $(".coffeeList").css("display","none");
-   $(".categoryCoffee").css("background-color","greenYellow");
-
-   $(".beverageList").css("display","none");
-   $(".categoryBeverage").css("background-color","greenyellow");
-
-   $(".dessertList").css("display","block");
-   $(".categoryDessert").css("background-color","blue");
-
-  }
 
 </script>
 
